--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Thumbs Up Rails
-#email: your-email@example.com
-#description: >- # this means to ignore newlines until "baseurl:"
-  #Write an awesome description for your new site here. You can edit this
-  #line in _config.yml. It will appear in your document head meta (for
-  #Google search results) and in your feed.xml site description.
-#baseurl: "" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
-#github_username:  jekyll
+email: zhephynwinter@gmail.com
+description: >- 
+  Personal Blog and website with blog posts about the Ruby on Rails framework 
+  Topics include Hotwire and Stimulus JS how to guides, Kamal deployment.
+#baseurl: "zhephyn.github.io/" 
+# url: "https://zhephyn.github.io" 
+twitter_username: zhephyn
+github_username:  zhephyn
 
 # Build settings
 theme: minima
